tracing, progress bar change during loading, Java 8 fixes, apostroph and period letter